Fixed keywords not showing up in editor, added summary slide icon, fixed centering for navigation line

--- a/styles/cp.css
+++ b/styles/cp.css
@@ -248,114 +248,6 @@
   display: inline-block;
 }
 
-.h5p-course-presentation .h5p-progressbar {
-  width: 100%;
-  overflow: visible;
-  height: 0.5em;
-  display: flex;
-  background: #cecece;
-  -webkit-user-select: none;
-}
-.h5p-course-presentation .h5p-progressbar .h5p-completed {
-  height: 0.25em;
-  width: 0;
-  box-shadow: 0 0 0.25em 0 #fff;
-  background: #0097fd;
-  background-image: -webkit-linear-gradient(top, #0097fd, #096bcb);
-  background-image: -moz-linear-gradient(top, #0097fd, #096bcb);
-  background-image: linear-gradient(to bottom, #0097fd, #096bcb);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0097fd', endColorstr='#096bcb', GradientType=0);
-  -webkit-transition: width 0.25s ease-in-out;
-  -moz-transition: width 0.25s ease-in-out;
-  -ms-transition: width 0.25s ease-in-out;
-  transition: width 0.25s ease-in-out;
-}
-
-.h5p-course-presentation .h5p-progressbar .h5p-progressbar-part {
-  height: 100%;
-  width: 0;
-
-  text-align: -webkit-center;
-
-  cursor: pointer;
-  box-shadow: 0 0 0.05em 0 #fff;
-}
-
-.h5p-course-presentation .h5p-progressbar .h5p-progressbar-part-show {
-  position: relative;
-
-  background: #0097fd;
-  background-image: -webkit-linear-gradient(top, #0097fd, #096bcb);
-  background-image: -moz-linear-gradient(top, #0097fd, #096bcb);
-  background-image: linear-gradient(to bottom, #0097fd, #096bcb);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0097fd', endColorstr='#096bcb', GradientType=0);
-
-  -webkit-transition: width 0.25s ease-in-out;
-  -moz-transition: width 0.25s ease-in-out;
-  -ms-transition: width 0.25s ease-in-out;
-  transition: width 0.25s ease-in-out;
-}
-
-/* Feedback figures for solution mode of progress bar */
-.h5p-course-presentation .h5p-progressbar .h5p-progressbar-part .h5p-progressbar-part-has-task:after {
-  display: inline;
-  position: relative;
-
-  top: -2.1em;
-  left: -0.5em;
-  z-index: 2;
-  padding: 0.1em 0.3em;
-
-  width: 98%;
-  line-height: 1em;
-  border: 0.1em solid;
-
-  cursor: auto;
-  font-family: 'H5PFontAwesome4';
-  font-size: 0.6em;
-}
-
-.h5p-course-presentation .h5p-progressbar .h5p-progressbar-part .h5p-progressbar-part-has-task.h5p-is-correct:after {
-  content: "\f00c";
-  color: #6aa81b;
-  background: #d1e2ce;
-}
-
-.h5p-course-presentation .h5p-progressbar .h5p-progressbar-part .h5p-progressbar-part-has-task.h5p-is-wrong:after {
-  content: "\f00d";
-  color: #c33f62;
-  background: #e6ced1;
-}
-
-.h5p-course-presentation .h5p-progressbar .h5p-progressbar-part .h5p-progressbar-part-has-task {
-  display: block;
-  width: 0.35em;
-  height: 0.35em;
-
-  border-radius: 50%;
-  border: 1px solid #000;
-  cursor: pointer;
-
-  background: #cecece;
-}
-
-.h5p-course-presentation .h5p-progressbar .h5p-progressbar-part.h5p-progressbar-part-show .h5p-progressbar-part-has-task.h5p-answered {
-  background: transparent;
-}
-
-.h5p-course-presentation .h5p-progressbar .h5p-progressbar-part .h5p-progressbar-part-has-task.h5p-answered {
-  background: transparent;
-}
-
-.h5p-course-presentation .h5p-progressbar .h5p-progressbar-part .h5p-progressbar-part-has-task {
-  background: #096bcb;
-}
-
-.h5p-course-presentation .h5p-progressbar .h5p-progressbar-part.h5p-progressbar-part-show .h5p-progressbar-part-has-task {
-  background: #cecece;
-}
-
-
 .h5p-course-presentation .h5p-slide-button {
   display: inline-block;
   padding: 0;
