--- a/styles/navigation-line.css
+++ b/styles/navigation-line.css
@@ -1,5 +1,9 @@
 /* --------------------------------------- Footer -------------------------------- */
 
+.h5p-course-presentation .h5p-footer {
+  height: 6.5%;
+}
+
 /* Footer buttons */
 .h5p-course-presentation .h5p-footer .h5p-footer-button {
   background: transparent;
@@ -8,16 +12,32 @@
 
 /* Footer containers */
 .h5p-course-presentation .h5p-footer .h5p-footer-left-adjusted {
-  float: left;
+  position: absolute;
+  left: 0em;
   max-width: 40%;
+  height: inherit;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .h5p-course-presentation .h5p-footer .h5p-footer-right-adjusted {
-  float: right;
+  position: absolute;
+  text-align: right;
+  right: 0em;
+  width: 40%;
+  height: inherit;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .h5p-course-presentation .h5p-footer .h5p-footer-center-adjusted {
   text-align: center;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* ---------------------------- Footer slide information buttons ----------------------- */
@@ -80,7 +100,11 @@
 
 /* Solution mode container */
 .h5p-course-presentation .h5p-footer .h5p-footer-exit-solution-mode {
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+
   position: absolute;
   right: 0em;
   margin-right: 3em;
@@ -90,27 +114,33 @@
 /* Footer solution mode text */
 .h5p-course-presentation .h5p-footer .h5p-footer-exit-solution-mode-text {
   display: inline-block;
+  padding: 0 0.25em;
 }
 
 /* Footer solution mode underlined */
 .h5p-course-presentation .h5p-footer .h5p-footer-exit-solution-mode-underlined {
   display: inline-block;
   text-decoration: underline;
+  padding: 0 0.25em;
 }
 
 /* Solution mode text changes to footer elements */
 .h5p-course-presentation .h5p-footer.h5p-footer-solution-mode .h5p-footer-toggle-full-screen:before,
 .h5p-course-presentation .h5p-footer.h5p-footer-solution-mode .h5p-footer-previous-slide:before,
 .h5p-course-presentation .h5p-footer.h5p-footer-solution-mode .h5p-footer-next-slide:after,
-.h5p-course-presentation .h5p-footer.h5p-footer-solution-mode .h5p-footer-toggle-keywords:before {
+.h5p-course-presentation .h5p-footer.h5p-footer-solution-mode .h5p-footer-toggle-keywords:before,
+.h5p-course-presentation .h5p-footer.h5p-footer-solution-mode .h5p-footer-toggle-keywords {
   color: #aeaeae;
 }
+
+
 
 /* --------------------------------------------- Footer elements ---------------------------------------- */
 
 /* Footer keyword button */
 .h5p-course-presentation .h5p-footer .h5p-footer-toggle-keywords {
   display: inline-block;
+  width: 100%;
 
   overflow: hidden;
   text-overflow: ellipsis;
@@ -132,6 +162,8 @@
 .h5p-course-presentation .h5p-footer .h5p-footer-toggle-full-screen {
   display: inline-block;
   cursor: pointer;
+  text-align: right;
+  width: 100%;
 }
 
 .h5p-course-presentation .h5p-footer .h5p-footer-toggle-full-screen:before {
@@ -151,4 +183,116 @@
 /* Solution mode text changes to footer elements */
 .h5p-course-presentation .h5p-footer.footer-full-screen button.h5p-footer-button {
   font-size: 1.0em;
+}
+
+/* ----------------------------------------- Progress bar --------------------------------------------- */
+
+.h5p-course-presentation .h5p-progressbar {
+  width: 100%;
+  overflow: visible;
+  height: 3.5%;
+  display: flex;
+  background: #cecece;
+  -webkit-user-select: none;
+}
+
+.h5p-course-presentation .h5p-progressbar .progressbar-part-summary-slide:before {
+  font-family: 'H5PFontAwesome4';
+  content: '\f080';
+  position: relative;
+  top: 0.05em;
+  font-size: 0.55em;
+  padding: 0 0.1em;
+  color: #000;
+}
+
+.h5p-course-presentation .h5p-progressbar .progressbar-part-summary-slide.h5p-progressbar-part-show:before {
+  color: #FFF;
+}
+
+.h5p-course-presentation .h5p-progressbar .h5p-progressbar-part {
+  height: 100%;
+  width: 0;
+
+  cursor: pointer;
+  box-shadow: 0 0 0.05em 0 #fff;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.h5p-course-presentation .h5p-progressbar .h5p-progressbar-part-show {
+  position: relative;
+
+  background: #0097fd;
+  background-image: -webkit-linear-gradient(top, #0097fd, #096bcb);
+  background-image: -moz-linear-gradient(top, #0097fd, #096bcb);
+  background-image: linear-gradient(to bottom, #0097fd, #096bcb);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0097fd', endColorstr='#096bcb', GradientType=0);
+
+  -webkit-transition: width 0.25s ease-in-out;
+  -moz-transition: width 0.25s ease-in-out;
+  -ms-transition: width 0.25s ease-in-out;
+  transition: width 0.25s ease-in-out;
+}
+
+/* -------------------------------------- Feedback for progress bar ------------------------------------- */
+.h5p-course-presentation .h5p-progressbar .h5p-progressbar-part .h5p-progressbar-part-has-task:after {
+  display: inline;
+  position: relative;
+
+  top: -2.3em;
+  left: -0.5em;
+  z-index: 2;
+  padding: 0.1em 0.3em;
+
+  width: 98%;
+  line-height: 1em;
+  border: 0.1em solid;
+
+  cursor: auto;
+  font-family: 'H5PFontAwesome4';
+  font-size: 0.6em;
+}
+
+.h5p-course-presentation .h5p-progressbar .h5p-progressbar-part .h5p-progressbar-part-has-task.h5p-is-correct:after {
+  content: "\f00c";
+  color: #6aa81b;
+  background: #d1e2ce;
+}
+
+.h5p-course-presentation .h5p-progressbar .h5p-progressbar-part .h5p-progressbar-part-has-task.h5p-is-wrong:after {
+  content: "\f00d";
+  color: #c33f62;
+  background: #e6ced1;
+}
+
+/* --------------------------------------------------------- Progressbar with task ---------------------------- */
+.h5p-course-presentation .h5p-progressbar .h5p-progressbar-part .h5p-progressbar-part-has-task {
+  display: block;
+  width: 0.45em;
+  height: 0.45em;
+
+  border-radius: 50%;
+  border: 1px solid #000;
+  cursor: pointer;
+
+  background: #cecece;
+}
+
+.h5p-course-presentation .h5p-progressbar .h5p-progressbar-part .h5p-progressbar-part-has-task {
+  background: #096bcb;
+}
+
+.h5p-course-presentation .h5p-progressbar .h5p-progressbar-part .h5p-progressbar-part-has-task.h5p-answered {
+  background: transparent;
+}
+
+.h5p-course-presentation .h5p-progressbar .h5p-progressbar-part.h5p-progressbar-part-show .h5p-progressbar-part-has-task {
+  background: #cecece;
+}
+
+.h5p-course-presentation .h5p-progressbar .h5p-progressbar-part.h5p-progressbar-part-show .h5p-progressbar-part-has-task.h5p-answered {
+  background: transparent;
 }
