--- a/styles/summary-slide.css
+++ b/styles/summary-slide.css
@@ -54,13 +54,6 @@
   border-spacing: 0;
 }
 
-/* Summary footer style */
-.h5p-course-presentation .h5p-summary-footer {
-  position: absolute;
-  bottom: 1em;
-  width: 100%;
-}
-
 /* ---------------------------- Social media styles ---------------------------------------------- */
 
 /* Facebook and Twitter link styling */
